<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.github.teren4m.words.screens.word.create.ICreateWordViewModel"/>

        <variable
                name="viewModel"
                type="ICreateWordViewModel"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/Page"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/word"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditText.Word"
                    android:hint="@string/hint_word"
                    android:imeOptions="actionNext"
                    android:text="@={viewModel.word}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/transcription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/word"
                app:layout_constraintRight_toRightOf="@+id/word"
                app:layout_constraintTop_toBottomOf="@+id/word"
                android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditText.Word"
                    android:hint="@string/hint_transcription"
                    android:imeOptions="actionNext"
                    android:text="@={viewModel.transcription}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/root"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/word"
                app:layout_constraintRight_toRightOf="@+id/word"
                app:layout_constraintTop_toBottomOf="@+id/transcription"
                android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditText.Word"
                    android:hint="@string/hint_root"
                    android:imeOptions="actionNext"
                    android:text="@={viewModel.root}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/part_of_speech"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/word"
                app:layout_constraintRight_toRightOf="@+id/word"
                app:layout_constraintTop_toBottomOf="@+id/root"
                android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditText.Word"
                    android:hint="@string/hint_part_of_speech"
                    android:imeOptions="actionNext"
                    android:text="@={viewModel.partOfSpeech}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/translation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/word"
                app:layout_constraintRight_toRightOf="@+id/word"
                app:layout_constraintTop_toBottomOf="@+id/part_of_speech"
                android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditText.Word"
                    android:hint="@string/hint_translation"
                    android:imeOptions="actionDone"
                    app:edit_done="@{() -> viewModel.create()}"
                    android:text="@={viewModel.translation}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/create"
                android:layout_width="0dp"
                android:text="@string/text_create"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/word"
                app:layout_constraintRight_toRightOf="@+id/word"
                android:onClick="@{() -> viewModel.create() }"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>